# tap-productboard

./: .gitignore  README.md  catalog.json  meltano.yml  pyproject.toml  tap-productboard.sh  tox.ini
tap_productboard/: client.py  streams.py  tap.py
tap_productboard/schemas/: features.json
tap_productboard/tests/: __init__.py  test_core.py
