[tool.poetry]
name = "tap-productboard"
version = "0.1.0"
description = "`tap-productboard` is a Singer tap for Productboard, built with the Meltano SDK for Singer Taps."
authors = ["Liam Coley"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-productboard = 'tap_productboard.tap:TapProductboard.cli'
